@@ -6,7 +6,7 @@ name 'Catalyst-Runtime';
 all_from 'lib/Catalyst/Runtime.pm';
 
 requires 'MooseX::Emulate::Class::Accessor::Fast' => '0.00300';
-requires 'Moose' => '0.51';
+requires 'Moose' => '0.58';
 requires 'Carp';
 requires 'Class::Accessor::Fast';
 requires 'Class::Data::Inheritable';
