@@ -77,6 +77,11 @@ sub class_go_test_method :Private {
     $c->response->headers->header( 'X-Class-Go-Test-Method' => 1 );
 }
 
+sub class_visit_test_method :Private {
+    my ( $self, $c ) = @_;
+    $c->response->headers->header( 'X-Class-Visit-Test-Method' => 1 );
+}
+
 sub loop_test : Local {
     my ( $self, $c ) = @_;
 
